--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "react": "^16.3.1",
     "react-dom": "^16.3.1",
     "react-scripts": "1.1.4",
-    "tachyons": "^4.9.1"
+    "tachyons": "^4.9.1",
+    "url-parse": "^1.4.3"
   },
   "scripts": {
     "start": "react-scripts start",
